	  rcfile_error() to parse_rcfile() so that we only get prompted
	  once for all errors instead of separately for each error.
	  Also make sure that each rcfile error message ends in a
	  newline. (DLR)
	- Don't treat the return value of strn?(case)?cmp() as boolean.
	  (DLR and David Benbennick)
	- Automatically install a symlink "rnano" pointing to nano.
	  Changes to src/Marefile.am. (DLR)
- files.c:
  close_open_file()
	- Tweak to no longer rely on the return values of
	  open_(prev|next)file(). (DLR)
  write_file()
	- For consistency with nano 1.2.x and with other editors, make
	  the mode of newly created files 666 instead of 600 before
	  it's modified by the umask. (DLR)
  do_writeout()
	- If we're in restricted mode abd the current filename isn't
	  blank, we can't change it, so disable tab completion in that
	  case. (DLR)
	- Fix spacing problem in the "Save Under Different Name"
	  prompt. (DLR)
- global.c:
  shortcut_init()
	- Fix erroneous #ifdef so that nano compiles with
	  --disable-justify again. (DLR; found by Mike Frysinger)
	- Change the Cancel shortcut in the file browser to an Exit
	  shortcut, to be more compatible with the current version of
	  Pico. (DLR)
  thanks_for_all_the_fish()
	- Delete topwin, edit, and bottomwin. (David Benbennick)
- nano.c:
  do_enter()
	- Don't treat it as a special case when the user presses Enter
	  on the last line of the screen and smooth scrolling is on, for
	  consistency. (DLR)
  do_alt_speller()
	- When reloading the newly spell-checked temporary file, call
	  terminal_init() to make sure that all the original terminal
	  settings are restored, as a curses-based alternative spell
	  checker (e.g. aspell) can change them. (DLR)
  quote_length()
	- Fix problem where quoted justify wouldn't work if HAVE_REGEX_H
	  wasn't set. (David Benbennick)
  do_justify()
	- Add allow_respacing flag, used to indicate when we've moved to
	  the next line after justifying the current line, and only run