@@ -71,6 +71,8 @@ CVS code -
 	  (DLR and David Benbennick)
 	- Automatically install a symlink "rnano" pointing to nano.
 	  Changes to src/Marefile.am. (DLR)
+	- Move the static int pid to the beginning of nano.c with all 
+	  the other static variables. (DLR)
 - files.c:
   close_open_file()
 	- Tweak to no longer rely on the return values of
@@ -95,6 +97,9 @@ CVS code -
   thanks_for_all_the_fish()
 	- Delete topwin, edit, and bottomwin. (David Benbennick)
 - nano.c:
+  usage()
+	- Don't translate the option strings for -Z/--restricted.
+	  (David Benbennick)
   do_enter()
 	- Don't treat it as a special case when the user presses Enter
 	  on the last line of the screen and smooth scrolling is on, for
